get data from inputs

--- a/popup.html
+++ b/popup.html
@@ -32,14 +32,14 @@
     <label>Origin Cookie Name</label>
     <input class="mb" type="text" id="origin-cookie-name" value="AS24ApiAuth_int" />
     <label>Origin Cookie URL</label>
-    <input class="mb" type="text" id="origin-cookie-url" value="int.autoscout24.ch" />
+    <input class="mb" type="text" id="origin-cookie-url" value="https://int.autoscout24.ch/de" />
     <hr />
     <button id="copy-dev-context">
       DevContext to Clipboard
     </button>
     <hr class="mb" />
     <label>Destination Cookie Name</label>
-    <input type="text" id="mvoe-cookie-to-name" value="AS24ApiAuth" />
+    <input type="text" id="destination-cookie-name" value="AS24ApiAuth" />
     <button id="move-cookie">
       Copy Cookie to this Tab
     </button>
