--- a/popup.html
+++ b/popup.html
@@ -43,5 +43,14 @@
     <button id="move-cookie">
       Copy Cookie to this Tab
     </button>
+    <hr class="mb" />
+    <label>Test Server</label>
+    <select id="test-server">
+      <option value="">int</option>
+      <option value="test1">test1</option>
+      <option value="test2">test2</option>
+      <option value="test3">test3</option>
+      <option value="test4">test4</option>
+    </select>
   </body>
 </html>
