Select style adjustments

--- a/popup.html
+++ b/popup.html
@@ -22,13 +22,15 @@
       hr {
         width: 100%;
       }
+      select {
+        font-size: 15px;
+      }
       .mb {
         margin-bottom: 10px;
       }
     </style>
   </head>
   <body>
-    <h3 style="font-weight:bold; text-align:center;">Riki's Utils</h3>
     <label>Origin Cookie Name</label>
     <input class="mb" type="text" id="origin-cookie-name" value="AS24ApiAuth_int" />
     <label>Origin Cookie URL</label>
@@ -44,13 +46,13 @@
       Copy Cookie to this Tab
     </button>
     <hr class="mb" />
-    <label>Test Server</label>
+    <label>Int Test Server</label>
     <select id="test-server">
-      <option value="">int</option>
-      <option value="test1">test1</option>
-      <option value="test2">test2</option>
-      <option value="test3">test3</option>
-      <option value="test4">test4</option>
+      <option value="">Default Int (no cookie)</option>
+      <option value="test1">Test 1</option>
+      <option value="test2">Test 2</option>
+      <option value="test3">Test 3</option>
+      <option value="test4">Test 4</option>
     </select>
   </body>
 </html>
