Getting options from storage

--- a/options.html
+++ b/options.html
@@ -4,8 +4,8 @@
     <title>Riki's Utils: Options</title>
     <style>
       body {
-        /* width: 200px; */
-        margin: 20px;
+        width: 300px;
+        margin: 20px auto;
         display: flex;
         flex-direction: column;
       }
@@ -16,12 +16,6 @@
         border: solid 1px lightgray;
         padding: 5px;
         margin-bottom: 10px;
-        font-size: 15px;
-      }
-      hr {
-        width: 100%;
-      }
-      select {
         font-size: 15px;
       }
       #options-fields {
