--- a/popup.html
+++ b/popup.html
@@ -1,51 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="popup.js"></script>
     <style>
       body {
-        width: 200px;
         display: flex;
         flex-direction: column;
       }
       button {
         padding: 5px;
-      }
-      input {
-        border: solid 1px lightgray;
-        padding: 5px;
-      }
-      label {
-        font-size: 10px;
-        display: block;
-      }
-      hr {
-        width: 100%;
+        margin-bottom: 10px;
       }
       select {
-        font-size: 15px;
-      }
-      .mb {
-        margin-bottom: 10px;
+        font-size: 14px;
       }
     </style>
   </head>
   <body>
-    <label>Origin Cookie Name</label>
-    <input class="mb" type="text" id="origin-cookie-name" value="AS24ApiAuth_int" />
-    <label>Origin Cookie URL</label>
-    <input class="mb" type="text" id="origin-cookie-url" value="https://int.autoscout24.ch/de" />
-    <hr />
     <button id="copy-dev-context">
       DevContext to Clipboard
     </button>
-    <hr class="mb" />
-    <label>Destination Cookie Name</label>
-    <input type="text" id="destination-cookie-name" value="AS24ApiAuth" />
     <button id="move-cookie">
       Copy Cookie to this Tab
     </button>
-    <hr class="mb" />
     <label>Int Test Server</label>
     <select id="test-server">
       <option value="">Default Int (no cookie)</option>
@@ -54,5 +30,7 @@
       <option value="test3">Test 3</option>
       <option value="test4">Test 4</option>
     </select>
+    <script src="global.js"></script>
+    <script src="popup.js"></script>
   </body>
 </html>
