Make it more autoscouty

--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Riki's Utils: Options</title>
+    <title>AutoScout24 Dev Utils: Options</title>
     <style>
       body {
         width: 300px;
