--- a/popup.html
+++ b/popup.html
@@ -25,10 +25,12 @@
         border: 0;
         color: #FFFFFF;
         background-color: #00468b;
-        cursor: pointer;
         outline: none;
       }
-      button:hover {
+      button:not(.selected) {
+        cursor: pointer;
+      }
+      button:not(.selected):hover {
         background-color: #0052a5;
       }
     </style>
