--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,9 @@
     <style>
       body {
         margin: 0;
+        border: 1px solid #70ace8;
+        background: #00468b;
+        color: white;
       }
       h3 {
         margin: 15px 10px;
@@ -17,21 +20,22 @@
         padding: 5px;
       }
       button.selected {
-        background: #ff7500;
+        color: #a7a7a7;
       }
       button {
         padding: 10px;
         font-weight: 600;
-        border: 0;
-        color: #FFFFFF;
-        background-color: #00468b;
+        color: black;
+        background-color: white;
         outline: none;
+        border: none;
+        border-top: solid 1px #70ace8;
       }
       button:not(.selected) {
         cursor: pointer;
       }
       button:not(.selected):hover {
-        background-color: #0052a5;
+        background-color: #e9f4ff;
       }
     </style>
   </head>
