Change prompt text

--- a/src/popup.html
+++ b/src/popup.html
@@ -40,7 +40,7 @@
     </style>
   </head>
   <body>
-    <h3>Test Server:</h3>
+    <h3>Select a server:</h3>
     <div class="list">
       <button class="test-env" id="button-int" value="">Default INT (no cookie)</button>
       <button class="test-env" id="button-test1" value="test1">Test 1</button>
