--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,13 @@
     </style>
   </head>
   <body>
+    <div>
+      <label for="abacus-in-out-checkbox">[F] to fill In & Out</label>
+      <input type="checkbox" id="abacus-in-out-checkbox" />
+    </div>
+    <button id="abacus-in-out-button">
+      Fill Abacus In & Out
+    </button>
     <button id="copy-dev-context">
       DevContext to Clipboard
     </button>
